feat(core): 添加熔断器、负载均衡管理和配置订阅功能
- 实现了 CircuitBreaker 熔断器，支持滑动窗口统计和三种状态切换
- 添加了 LoadBalancerManager 负载均衡器管理器，支持 SPI 扩展
- 实现了 MockRuleSubscriptionClient Mock 规则订阅客户端
- 添加了 ProtectionConfigClient 保护配置客户端，支持 SSE 实时推送
- 配置了 GitHub Actions 部署流水线，支持多服务镜像构建和部署